// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<AgentNotificationsMenu /> parent window is different doesn't render the visual notification option 1`] = `
<React.Fragment>
  <div
    id="audioNotificationOption"
    key="audioNotificationOption"
    onClick={[Function]}
    style={
      Object {
        ":hover": Object {
          "backgroundColor": "#DEF8FE",
        },
        "cursor": "pointer",
        "padding": "5px",
      }
    }
  >
    <FormattedMessage
      defaultMessage="Audio Notifications"
      id="app.containers.AgentNotificationsMenu.audio"
      values={Object {}}
    />
  </div>
</React.Fragment>
`;

exports[`<AgentNotificationsMenu /> parent window is the same notifications disabled does not render the checkboxes 1`] = `
<React.Fragment>
  <div
    id="audioNotificationOption"
    key="audioNotificationOption"
    onClick={[Function]}
    style={
      Object {
        ":hover": Object {
          "backgroundColor": "#DEF8FE",
        },
        "cursor": "pointer",
        "padding": "5px",
      }
    }
  >
    <FormattedMessage
      defaultMessage="Audio Notifications"
      id="app.containers.AgentNotificationsMenu.audio"
      values={Object {}}
    />
  </div>
  <div
    id="visualNotificationOption"
    key="visualNotificationOption"
    onClick={[Function]}
    style={
      Object {
        ":hover": Object {
          "backgroundColor": "#DEF8FE",
        },
        "cursor": "pointer",
        "padding": "5px",
      }
    }
  >
    <FormattedMessage
      defaultMessage="Visual Notifications"
      id="app.containers.AgentNotificationsMenu.visual"
      values={Object {}}
    />
  </div>
</React.Fragment>
`;

exports[`<AgentNotificationsMenu /> parent window is the same notifications enabled renders the checkboxes 1`] = `
<React.Fragment>
  <div
    id="audioNotificationOption"
    key="audioNotificationOption"
    onClick={[Function]}
    style={
      Object {
        ":hover": Object {
          "backgroundColor": "#DEF8FE",
        },
        "cursor": "pointer",
        "padding": "5px",
      }
    }
  >
    <FormattedMessage
      defaultMessage="Audio Notifications"
      id="app.containers.AgentNotificationsMenu.audio"
      values={Object {}}
    />
    <Icon
      name="checkStatus"
      style={
        Object {
          "float": "right",
        }
      }
    />
  </div>
  <div
    id="visualNotificationOption"
    key="visualNotificationOption"
    onClick={[Function]}
    style={
      Object {
        ":hover": Object {
          "backgroundColor": "#DEF8FE",
        },
        "cursor": "pointer",
        "padding": "5px",
      }
    }
  >
    <FormattedMessage
      defaultMessage="Visual Notifications"
      id="app.containers.AgentNotificationsMenu.visual"
      values={Object {}}
    />
    <Icon
      name="checkStatus"
      style={
        Object {
          "float": "right",
        }
      }
    />
  </div>
</React.Fragment>
`;
